# SunTracerCpp

./: CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt  Shade_Sun_Exposure_Checker_test.cpp  sunTracer_test1.cpp  test1.cpp
Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h
Google_tests/lib/googletest/cmake/: internal_utils.cmake
SunTracer_lib/: CMakeLists.txt  Shade_Sun_Exposure_Checker.cpp  Shade_Sun_Exposure_Checker.h  SunTracer.cpp  SunTracer.h
